k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
  namespace: jaeger
spec:
  type: NodePort
  selector:
    app: jaeger-application
  ports:
    - port: 8080
      targetPort: 8080
