k8s/virtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtualservice
  namespace: jaeger
spec:
  hosts:
  - "jaeger.example.com"  # replace with your actual hostname
  gateways:
  - jaeger-gateway
  http:
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: jaeger-service.jaeger.svc.cluster.local
          port:
            number: 8080
      rewrite:
        uri: "/"
        authority: jaeger-service.jaeger.svc.cluster.local:8080
